added async await callbacks to user query

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:700"
       rel="stylesheet"
     />
-    <title>Choosify</title>
+    <title>Choosify - Logged in </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="../styles/main.css" />
   </head>
@@ -17,6 +17,6 @@
     </div>
     <div class="contentContainer">    
     </div>
-    <script type="module" src="/src/app.js"></script>
+    <script type="module" src="/src/appLoggedIn.js"></script>
   </body>
 </html>
