--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,7 +3,7 @@ body {
   font-size: 16px;
   padding: 0px;
   margin: 0px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: whitesmoke;
   width: 100%;
   height: 100%;
@@ -18,11 +18,11 @@ body {
   grid-row: 1;
   display: inline-grid;
   width: 100%;
-  
+
   grid-template-columns: 1fr;
   grid-template-rows: 2fr;
   grid-row-gap: 0px;
-  
+
   text-align: center;
 }
 
@@ -49,15 +49,24 @@ body {
   margin: auto auto;
 }
 
+.loading {
+  display: block;
+  width: 35px;
+  height: 35px;
+  margin: auto;
+}
 
+.coverImage {
+  width: 450px;
+  height: 450px;
+}
 
-#loginButton{
+#loginButton {
   background-color: #1db954;
   border: none;
   font-size: 1em;
   display: inline-block;
   border-radius: 4px;
-  height:50px;
-    width:300px;
-
-} 
+  height: 50px;
+  width: 300px;
+}
