added github link and logout button

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -15,6 +15,10 @@
     <div class="titleContainer">
       <h1>Choosify</h1>
     </div>
+    <div class="linkContainer">
+    </div>
+    <div class="redirectContainer">
+      </div>
     <div class="contentContainer">    
     </div>
     <script type="module" src="/src/appLoggedIn.js"></script>
