--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -5,14 +5,23 @@ body {
   margin: 0px;
   font-family: "Roboto", sans-serif;
   color: whitesmoke;
-  width: 100%;
-  height: 100%;
   display: inline-grid;
   grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 1fr 2fr 1fr;
+  grid-template-rows: 1fr 3fr 1fr;
   grid-gap: 15px;
+  width: 100vw;
+  height: 100vh;
+}
+.linkContainer {
+  grid-column: 1;
+  grid-row: 1;
+  margin: 15px auto auto 15px;
 }
 
+.redirectContainer {
+  grid-column: 3;
+  grid-row: 1;
+}
 .titleContainer {
   grid-column: 2;
   grid-row: 1;
@@ -57,8 +66,9 @@ body {
 }
 
 .coverImage {
-  width: 450px;
-  height: 450px;
+  width: 350px;
+  height: 350px;
+  border-radius: 4px;
 }
 
 #loginButton {
@@ -69,4 +79,23 @@ body {
   border-radius: 4px;
   height: 50px;
   width: 300px;
+}
+
+#logoutButton {
+  display: block;
+  text-align: center;
+  align-items: center;
+
+  background-color: #1db954;
+  border: none;
+  font-size: 1em;
+  border-radius: 4px;
+  margin: 15px 15px auto auto;
+  height: 40px;
+  width: 100px;
+}
+
+.icon {
+  width: 40px;
+  height: 40px;
 }
